tests/baselines/reference/restParamModifier.errors.txt
tests/cases/compiler/restParamModifier.ts(2,27): error TS1005: ',' expected.


==== tests/cases/compiler/restParamModifier.ts (1 errors) ====
    class C {
        constructor(...public rest: string[]) {}
                              ~~~~
!!! error TS1005: ',' expected.
    }